# Financez

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  run.sh
app/: .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml
app/accounts/: forms.py  models.py  urls.py  utils.py  views.py
app/accounts/migrations/: 0001_initial.py
app/accounts/templates/accounts/: account_list.html  account_settings.html
app/currencies/: forms.py  models.py  serializers.py  urls.py  views.py
app/currencies/migrations/: 0001_initial.py
app/entries/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py  views_api.py  views_templates.py
app/entries/migrations/: 0001_initial.py  0002_alter_entry_total.py
app/entries/static/entries/: index.css  index.js  modal_account_list.css  modal_edit_entry.css
app/entries/templates/entries/: index.html  modal_accounts.html  modal_edit_entry.html
app/financez/: admin.py  apps.py  asgi.py  forms.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
app/financez/management/commands/: import_accounts.py  import_entries.py
app/financez/migrations/: 0001_initial.py  0002_auto_20200120_1913.py  0003_auto_20200120_1914.py  0004_remove_entry_acc_cr_remove_entry_acc_dr_and_more.py
app/registration/: forms.py  urls.py  views.py
app/reports/: services.py  urls.py  utils.py  views.py  views_api.py  views_templates.py
app/settings/: views.py  views_api.py
app/users/: serializers.py  urls.py  views.py
(+69 files in other folders)
