[tool.poetry]
name = "financez"
version = "0.1.0"
description = ""
authors = ["serge"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.7"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
django-cors-headers = "^3.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
